# Agent-Learn

./: .env.example  .gitignore  AGENTS.md  README.md  config.json  main.py  pyproject.toml
AgentEvaluation/: 04_run_bfcl_evaluation.py  README.md  __init__.py  bfcl.py  common.py  data_generation.py  dataset_config.py  gaia.py  quick_test.py
AgenticRL/: CliffWalking_Q-learning.py  README.md  __init__.py  api.py  datasets.py  mdp_rl.py  pipeline.py  quick_test.py  rewards.py  rl.py  tool.py  trainers.py
CodeAct/: Agent.py  ChatOpenAI.py  SandBox.py  main.py  prompt.py  type.py
RAG/: .env copy
RAG/chapter01-summary/: HelloWorld.ipynb
RAG/chapter02-model IO/: 03-提示词模板之PromptTemplate.ipynb  05-提示词模板之少量示例的提示词模板.ipynb  07-输出解析器的使用.ipynb  08-LangChain调用本地大模型.ipynb
RAG/chapter07-RAG/: 01-文档加载器的使用.ipynb  02-文档拆分器的使用.ipynb  03-文档嵌入模型的使用.ipynb  04-向量数据库的使用.ipynb  05-检索器的使用.ipynb  06-综合案例：智能对话助手.ipynb  main.py
docs/superpowers/plans/: 2026-05-15-hello-agents-shared-env-config.md
evaluation_reports/: bfcl_report_simple_python.md
evaluation_results/bfcl_official/: BFCL_v4_simple_python_result.json
hello-agents/code/: .env.example
hello-agents/code/chapter1/: FirstAgentTest.ipynb  FirstAgentTest.py
hello-agents/code/chapter10/: 06_MultiAgentDocumentAssist.py  10_A2ATool_Simple.py  10_CustomerService.py  12_ANPTaskDistribution.py  (+1 more)
hello_agents/: __init__.py  agent.py  llm.py
hello_agents/evaluation/: __init__.py
hello_agents/tools/: __init__.py
react/: .env.example  .gitignore  Agent.py  Calculator.py  ChatOpenAI.py  mian.py  prompt.py  type.py
(+38 files in other folders)
