[project]
name = "agentlearn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.7",
    "faiss-cpu>=1.13.2",
    "google-search-results>=2.4.2",
    "hello-agents>=0.2.0",
    "ipykernel>=7.2.0",
    "ipython>=9.10.1",
    "langchain>=1.0.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.3.0",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.1.12",
    "markdown>=3.8",
    "matplotlib-inline>=0.2.1",
    "openai>=2.31.0",
    "optuna>=4.8.0",
    "pandas>=3.0.2",
    "serpapi>=1.0.2",
    "tavily>=1.1.0",
    "unstructured>=0.16.0",
]

[project.optional-dependencies]
rl = [
    "accelerate>=1.0.0",
    "datasets>=3.0.0",
    "fastapi>=0.115.0",
    "optuna>=4.0.0",
    "peft>=0.14.0",
    "tensorboard>=2.18.0",
    "torch>=2.5.0",
    "transformers>=4.46.0",
    "trl>=0.13.0",
    "uvicorn>=0.30.0",
]
